--- a/Views/Home/Eliminar.cshtml
+++ b/Views/Home/Eliminar.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3 class="text-danger">¿Esta seguro eliminar al empleado?</h3>
+<h3 class="text-danger">¿Esta seguro eliminar al empleado prueba RAMA?</h3>
 
 <div class="row">
     <div class="col-sm-4">
